# r2

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/cook/: SKILL.md
.claude/skills/extract/: SKILL.md
.githooks/: pre-push
.github/workflows/: auto-merge.yml  check-paths.yml  ci.yml
brain/: available-supply.md  membership-turnover.md  rule-book.md  whole-as-sum-of-parts.md
brain/.obsidian/: workspace.json
methbooks/: .graphifyignore  AGENT_GUIDELINES.md  CONVENTIONS.md  mock_universe.py  pdf_to_md.py  rules_index.json
methbooks/examples/: README.md
methbooks/fetcher/: msci_fetch.py
methbooks/methodologies/MSCI/: __init__.py  climate_action.py  climate_action_data_dictionary.csv  climate_action_plan.json  corporate_events.py  corporate_events_data_dictionary.csv  eu_ctb_pab_overlay.py  eu_ctb_pab_overlay_data_dictionary.csv  eu_ctb_pab_overlay_plan.json  gics.py  gimi.py  (+22 more)
methbooks/pipeline/: agents.py  commit_plan.py  config.py  critique.py  deterministic.py  driver.py  enrich_graph.py  implementer.py  logging.py  page_lookup.py  planner.py  pr.py  rules_index.py  run.py  semantic.py  setup.py  tools.py  verifier_checks.py
references/: github-setup.md
scripts/: 01_sample.py  02_mean.py  99_report.py  constants.py
tests/: test_paths.py  test_snapshots.py  test_verifier_repair.py
tests/fixtures/: 01_sample.expected.json  99_report.expected.html
things/: additions-and-deletions.md  free-float.md  index-methodology.md  index-rebalancing.md  market-cap.md
things/.obsidian/: app.json  graph.json
(+256 files in other folders)
