[project]
name = "r2"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.65",
    "markitdown[pdf]>=0.1.5",
    "polars",
    "pydantic>=2.13.3",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

# Polars column operations return union types (float | Decimal | date | ...)
# that mypy cannot narrow without verbose explicit casts on every call.
# Rule and methodology modules do heavy Polars arithmetic; relax the
# operator and bytes-format checks there. Other strictness stays on.
[[tool.mypy.overrides]]
module = ["methbooks.rules.*", "methbooks.methodologies.*"]
disable_error_code = ["operator", "str-bytes-safe", "arg-type"]
